syntax = "proto3";

package rules;

import "rules/rule_config.proto";
import "transaction/transaction.proto";

message RuleRequest {
    uint64 total_rule_count = 1;
    uint64 number = 2;
    transaction.Transaction transaction = 3;
    rules.RuleConfig rule = 4;
    string profile_name = 5;
    string profile_uuid = 6;
}